# anthropic_openai_bridge_2

./: .gitignore  CLAUDE.md  README.md  example_tool_calling.py  example_usage.py  project_specification.md  pyproject.toml
src/anthropic_openai_bridge/: __init__.py  bridge.py
src/anthropic_openai_bridge/client/: __init__.py  openai_client.py
src/anthropic_openai_bridge/config/: config_manager.py
src/anthropic_openai_bridge/converters/: __init__.py  request_converter.py  response_converter.py  tool_converter.py
tests/fixtures/: anthropic_samples.json  openai_samples.json  tool_calling_anthropic_samples.json  tool_calling_openai_samples.json
tests/integration/: test_bridge_integration.py  test_tool_calling_integration.py
tests/unit/: test_bridge.py  test_config_manager.py  test_openai_client.py  test_request_converter.py  test_request_converter_tools.py  test_response_converter.py  test_response_converter_tools.py  test_tool_converter.py
